AdminUI/CSS/AdminDash.css
/* Scroll Box Section */

.SLB-Title
{
  /* Dimensions */
  width: 80vw;

  /* Positioning */
  display: flex;
  justify-content: space-between;

  /* Characterisitcs */
  color: var(--text);
  font-size: 2rem;
}

.SLB-Title p { margin: 5px; }

.scroll-list-box
{
  /* Dimensions */
  height: 30vh; 
  width: 80vw;

  /* Makes it scrollable */
  overflow-y: auto; 
  -webkit-overflow-scrolling: touch;
}

.scroll-list-box ul 
{
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.scroll-list-box li { height: 5vh; }

.scroll-list-box button 
{
  /* Dimensions */
  height: 100%;
  width: 100%;

  /* Characterisitics */
    border: 2px solid var(--card);
    padding-inline: 10px;

    /* Spacing */
    display: flex;
    align-items: center;
    justify-content: space-between;

    /* Text */
    color: var(--field);
    font-size: 1.25rem;
    text-align: left;
}

/* Status Selection Section */

.SCB-Title
{
  /* Dimensions */
  width: 80vw;

  /* Characterisitcs */
      color: var(--text);
      align-items: left;

      /* Text */
      font-size: 2rem;
}

.status-change-box 
{
  /* Dimensions */
  height: 50%; 
  width: 80vw;

  /* Characterisitcs */
    /* Text */
    color: var(--text);
    font-size: 1.5rem;
}

.status-change-box span 
{
    /* Positioning */
    display: flex;
    justify-content: left;

    /* Characterisitcs */
    margin: 12px 0px;
}

.status-change-box span p { margin: 0px 6px 0px 0px;}

#action-buttons 
{
  height: 24vh;
  margin-top: 2vh;
  
  display: flex;
  flex-direction: column;
  align-content: center;
}

#AB-apply-to-service
{
  height: 12vh;
  justify-content: space-between;
}

#AB-apply-to-service button 
{
  /* Dimensions */
  width: 47.5%;

  /* Characterisitics */
  box-sizing: border-box;
  border-radius: 14px;
  font-size: 2rem;
}

#SCB-AB-Open { background-color: greenyellow; }

#SCB-AB-Close { background-color: #DE3163; }

#SCB-AB-Deselect 
{
  background-color: var(--error);
  border-radius: 14px;
  margin-top: 4px;
  font-size: 2rem;
  height:45%;
}

/* Button Feedback */

.button-feedback:active {  animation: quick-darken 0.25s ease-out;  }

@keyframes quick-darken 
{
  0% { filter: brightness(1); }
  20% { filter: brightness(0.5); }
  100% { filter: brightness(1); } 
}

